# opendnssec

./: .gitignore  ANNOUNCE  Doxyfile.in  GNUmakefile  INSTALL.md  KNOWN_ISSUES  LICENSE  MIGRATION  Makefile  Makefile.am  NEWS  README  README.enforcer_testers  README.md  README.svn  README_FIRST.md  acinclude.m4  autogen.sh  configure.ac  doxygen.am  features.txt  make.sh  prepdist.sh  version.m4  x
auditor/: Makefile.am  README  README_auditor  README_kasp_check  README_kaspcheck  acinclude.m4  autogen.sh  command_test_data  configure.ac  design_notes.rtf  design_notes.txt  kasp_auditor.in  kasp_check.in  ods-auditor.1.in  ods-auditor.in  ods-kaspcheck.1.in  ods-kaspcheck.in
auditor/lib/: kasp_auditor.rb  kasp_checker.rb  time_shift.rb
auditor/m4/: acx_dnsruby.m4  acx_prefixhack.m4  acx_ruby_library.m4  am_path_ruby.m4  am_prog_ruby.m4  opendnssec_common.m4
auditor/test/: audit.sh  auditor_test.rb  checker_test.rb  run.rb  test.sh
auditor/test_scripts/: auditor_test.rb  checker_test.rb
common/: Makefile.am  allocator.c  allocator.h  b64_ntop.c  b64_pton.c  backup.c  backup.h  cfg.c  cfg.h  clientpipe.c  clientpipe.h  cmdhandler.c  cmdhandler.h  compat.h  confparser.c  confparser.h  crash.c  crash.h  crashtest.c  datastructure.c  datastructure.h  debug.c  debug.h  debugtest.c  duration.c  duration.h  file.c  file.h  janitor.c  janitor.h  locks.c  locks.h  log.c  log.h  logger.h  logging.c  logging.h  longgetopt.c  longgetopt.h  presentation.c  (+18 more)
common/scheduler/: fifoq.c  fifoq.h  schedule.c  schedule.h  task.c  task.h  worker.c  worker.h
conf/: Makefile.am  addns.rnc  addns.rng  addns.xml.in  conf-mysql.xml.in  conf.rnc  conf.rng  conf.xml.in  configure.ac  enforcerstate.rnc  enforcerstate.rng  enforcerstate.xml  enforcerstate.xml.in  kasp.rnc  kasp.rng  kasp.xml.in  kasp2html.xsl  signconf.rnc  signconf.rng  signconf.xml.in  zonefetch.rnc  zonefetch.xml.in  zonelist.rnc  zonelist.rng  zonelist.xml.in
conf/m4/: acx_pkcs11_modules.m4  opendnssec_common.m4
contrib/: Makefile.am  opendnssec.spec.in
contrib/bash_completion.d/: README.md  opendnssec
contrib/distros/: ods-enforcerd.service  ods-signerd.service  opendnssec-mysql.spec  opendnssec.spec  opendnssec_2.1.10.el7.spec
contrib/ods-migratekeytool/: ods-migratekeytool.md  ods-migratekeytool.py
contrib/ods-sequencer/: ods-sequencer  ods-sequencer-submit.sh  ods-sequencer.md
contrib/testing-tools/: README.md  nulllibrary.c  pkcs11.h  testpkcs11.c
enforcer/: Makefile.am  README  acinclude.m4  configure.ac
enforcer-ng/: AUTHORS  Makefile.am  README
enforcer-ng/doc/: Changelog
enforcer-ng/enforcer.xcodeproj/: project.pbxproj
enforcer-ng/man/: Makefile.am  ods-enforcer.8  ods-enforcer.8.in  ods-enforcerd.8  ods-enforcerd.8.in
enforcer-ng/src/: Makefile.am  ods-enforcer-db-setup.c  ods-enforcer.c  ods-enforcerd.c
enforcer/common/: Makefile.am  daemon.c  daemon.h  daemon_util.c  daemon_util.h  kaspaccess.c  kaspaccess.h  privdrop.c  privdrop.h
enforcer/communicated/: Makefile.am  communicator.c  communicator.h  daemon.c  daemon.h  daemon_util.h
enforcer/communicator/: README  auto-build.sh  configure.ac
enforcer/doc/: ods-enforcerd.8.in
enforcer/enforcerd/: Makefile.am  enforcer.c  enforcer.h  ods-enforcerd.8.in
enforcer/key-generator/: README  auto-build.sh  configure.ac
enforcer/keygend/: Makefile.am  daemon.c  daemon.h  daemon_util.c  kaspaccess.h  keygend.c  keygend.h  keygend_util.c  keygend_util.h
enforcer/ksm/: Makefile.am  README  database_access_lite.c  database_access_mysql.c  database_connection_lite.c  database_connection_mysql.c  database_init_rundown.c  database_support_lite.c  database_support_mysql.c  database_threads.c  datetime.c  dd_string.c  debug.c  di_string.c  dq_string.c  du_string.c  ksm_dnsseckeys.c  ksm_import.c  ksm_init_rundown.c  ksm_key.c  ksm_key_delete.c  ksm_keyword.c  ksm_list.c  ksm_parameter.c  ksm_parameter_value.c  ksm_policy.c  ksm_policy_value.c  ksm_purge.c  ksm_request.c  ksm_time.c  ksm_update.c  ksm_version.c  ksm_zone.c  memory.c  message.c  string_util.c  string_util2.c
enforcer/libksm/: COPYING  Makefile.am  README  auto-build.sh  configure.ac
enforcer/m4/: acx_database_backend.m4  acx_dbparams.m4  acx_ldns.m4  acx_libhsm.m4  acx_mysql.m4  acx_sqlite3.m4  acx_strict.m4  opendnssec_common.m4
enforcer/man/: Makefile.am  ods-enforcer-db-setup.8.in  ods-enforcer.8.in  ods-enforcerd.8.in  ods-ksmutil.1.in
enforcer/src/: Makefile.am  ods-enforcer-db-setup.c  ods-enforcer.c  ods-enforcerd.c  ods-ksmutil  ods-migrate.c
enforcer/test/: Makefile.am  database_setup.sh  database_setup_lite.sh  database_setup_mysql.sh.in  database_setup_sqlite3.sh.in  test.c  test_database.c  test_datetime.c  test_du_string.c  (+13 more)
hsm-toolkit/: Makefile  Makefile.am  autogen.sh  configure.ac  hsm-toolkit.c  pktools.c  pktools.h
hsmbully/: Makefile.am  Makefile.old  acinclude.m4  autogen.sh  configure.ac
libhsm/: Makefile.am  acinclude.m4  auto-build.sh  configure.ac  libhsm.doxygen
libksm/: Makefile.am  README  acinclude.m4  auto-build.sh  autogen.sh  configure.ac
signer/: AUTHORS  Makefile  Makefile.am  README  acinclude.m4  autogen.sh  conf.xml.sample.in  configure.ac  opendnssec.conf.in
signer_tools/: Makefile.in  README  config.h.in  configure.ac
softHSM/: AUTHORS  COPYING  LICENSE  Makefile  Makefile.am  NEWS  README  README.svn  SoftAttribute.cpp  SoftAttribute.h  SoftFind.cpp  SoftFind.h  SoftHSMInternal.cpp  SoftHSMInternal.h  SoftObject.cpp  SoftObject.h  SoftSession.cpp  SoftSession.h  acinclude.m4  autogen.sh  configure.ac  file.cpp  file.h  main.cpp  main.h  object.cpp  pkcs11_unix.h  session.cpp  softhsm.conf.in  softhsminternal.cpp
tools/: Makefile.am  odctl.in  ods-control.8.in  ods-control.in  ods-kasp.5.in  ods-kasp2html.in  ods-timing.5.in  opendnssec.1.in  opendnssec.7.in
xml/: Makefile.am  acinclude.m4  conf.rnc  conf.xml  conf.xml.in  configure.ac  kasp.rnc  kasp.xml  kasp.xml.in  kasp2html.xsl  signconf.rnc  signconf.xml  zonefetch.rnc  zonefetch.xml  zonefetch.xml.in  zonelist.rnc  zonelist.xml  zonelist.xml.in
(+3384 files in other folders)
